--- a/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
@@ -17,4 +17,11 @@
         width: 15px;
         cursor: pointer;
     }
+    .custom-file-upload {
+        border: 1px solid #454d67;
+        display: inline-block;
+        padding: 10px 15px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
 }
