File upload in edit order details

--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/bulk-upload-product/bulk-upload-product.component.html
@@ -21,7 +21,7 @@
                         (change)="getFileDetails($event)" />
                 </p>
                 <div *ngIf="!files.length">
-                    <p>No files are choosen</p>
+                    <p>No files are chosen</p>
                 </div>
                 <div class="pb-3" *ngIf="files.length">
                     <div class="font-weight-normal" *ngFor="let file of files">
