--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
@@ -16,7 +16,7 @@
                 <p class="text-danger" *ngIf="improperCount">{{improperCount}} image is not as per the dimension in
                     guideline</p>
                 <div *ngIf="!files.length">
-                    <p>No files are choosen</p>
+                    <p>No files are chosen</p>
                 </div>
                 <div *ngIf="files.length">
                     <p>{{files.length}} files are selected to upload</p>
