--- a/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.scss
@@ -17,6 +17,10 @@
         width: 15px;
         cursor: pointer;
     }
+    .removeImageSize {
+        width: 16px;
+        height: 16px;
+    }
     .custom-file-upload {
         border: 1px solid #454d67;
         display: inline-block;
