--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
@@ -82,7 +82,9 @@
                             <label class="font-weight-500 text-color">Upload Awb File</label>
                         </div>
                         <div class="col-8">
-                            <kt-uplod-preview-image [type]="'formField'" (upload)="uploadImage($event)">
+                            <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'uploadedAwbFile'"
+                                [fileAcceptType]="'image/*'" [action]="'remove'" (upload)="uploadImage($event)"
+                                (remove)="removeImage($event)">
                             </kt-uplod-preview-image>
                         </div>
                     </div>
@@ -92,7 +94,10 @@
                             <label class="font-weight-500 text-color">Upload Awb Box</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="emiEndDate" class="form-control" disabled>
+                            <kt-uplod-preview-image [type]="'formField'" [formFieldName]="'uploadedAwbBox'"
+                                [fileAcceptType]="'image/*, .pdf'" [action]="'remove'" (upload)="uploadImage($event)"
+                                (remove)="removeImage($event)">
+                            </kt-uplod-preview-image>
                         </div>
                     </div>
 
