--- a/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-preview-image/uplod-preview-image.component.html
@@ -8,8 +8,14 @@
 </div>
 
 <div *ngIf="type == 'formField'">
-    <label for="custom-file-upload" class="custom-file-upload font-weight-500">
-        Choose File
+    <label for="custom-file-upload{{formFieldName}}" class="custom-file-upload font-weight-500">
+        Attach File
     </label>
-    <input #file id="custom-file-upload" type="file" accept='image/*' (change)="uploadFile($event)" />
+<input #file id="custom-file-upload{{formFieldName}}" type="file" accept="{{fileAcceptType}}" (change)="uploadFile($event)" />
+    <div *ngIf="!selectedFile">No file chosen</div>
+    <div *ngIf="selectedFile">
+        <span class="pr-2">{{selectedFile?.originalname}}</span>
+        <img *ngIf="action == 'remove'" class="removeImageSize kt-pointer" [src]="'assets/media/icons/cancel.png'"
+            (click)="removeFile($event)" />
+    </div>
 </div>
