--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -514,3 +514,15 @@ mat-header-row {
 	line-height: 0;
 	min-width: 0;
 }
+
+.green{
+	color: #8ddb5d !important;
+    text-transform: capitalize;
+}
+
+.red{
+	color: #ff7272 !important;
+}
+.pending{
+	color: rgb(248, 177, 80) !important;
+}
